Added documentation for module RegistroEnfermedad
