# Modules/RegistroEnfermedad/Http/Requests/CreateRegistroEnfermedadAPIRequest.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace Modules\RegistroEnfermedad\Http\Requests;
+
+use Modules\RegistroEnfermedad\Entities\RegistroEnfermedad;
+use InfyOm\Generator\Request\APIRequest;
+
+class CreateRegistroEnfermedadAPIRequest extends APIRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return RegistroEnfermedad::$rules;
+    }
+}
